Автотесты с разными конфигами

--- a/analyze2.ipynb
+++ b/analyze2.ipynb
@@ -124,102 +124,102 @@
     "    df = df[1:]\n",
     "    \n",
     "    ### График 1\n",
-    "    df.plot(x = 't', title=title)\n",
-    "    plt.xlabel('Время с начала инициализации [с]')\n",
-    "    plt.ylabel('Расстояние [м]')\n",
-    "    plt.savefig(f'{path2}xyz_vx_vy_vz_{file}.png')\n",
-    "    plt.show()\n",
-    "    ### График 2\n",
-    "    array = df.to_numpy()\n",
-    "    tu = array[:, 6]\n",
-    "    x = array[:, 0]\n",
-    "    y = array[:, 1]\n",
-    "    \n",
-    "    t = tu.reshape(-1, 1)\n",
-    "    # Здесь потом нужно сделать алгоритм для поиска лучшей степени полинома\n",
-    "    best_degree_x = 25\n",
-    "    best_degree_y = 25\n",
-    "    # Нормализуем время t\n",
-    "    scaler = StandardScaler()\n",
-    "    t_scaled = scaler.fit_transform(t)\n",
-    "    # Теперь применим полиномиальную регрессию\n",
-    "    # x\n",
-    "    poly_x = PolynomialFeatures(best_degree_x)\n",
-    "    t_poly_x = poly_x.fit_transform(t_scaled)\n",
-    "    # y\n",
-    "    poly_y = PolynomialFeatures(best_degree_y)\n",
-    "    t_poly_y = poly_y.fit_transform(t_scaled)\n",
-    "\n",
-    "    # Используем Ridge для регуляризации\n",
-    "    model_x = Ridge(alpha=1e-6)\n",
-    "    model_y = Ridge(alpha=1e-6)\n",
-    "    \n",
-    "    model_x.fit(t_poly_x, x)\n",
-    "    model_y.fit(t_poly_y, y)\n",
-    "\n",
-    "    # Предсказанные значения\n",
-    "    x_pred = model_x.predict(t_poly_x)\n",
-    "    y_pred = model_y.predict(t_poly_y)\n",
-    "\n",
-    "    # Визуализация  \n",
-    "    plt.figure(figsize=(14, 6))\n",
-    "    \n",
-    "    plt.subplot(1, 2, 1)\n",
-    "    plt.scatter(t, x, color='blue', label='Исходные данные x')\n",
-    "    plt.plot(t, x_pred, color='red', label='Полиномиальная регрессия x')\n",
-    "    plt.title(f'Полиномиальная регрессия для x (степень {best_degree_x})')\n",
-    "    plt.xlabel('Время (t)')\n",
-    "    plt.ylabel('Координата (x)')\n",
-    "    plt.legend()\n",
-    "    \n",
-    "    plt.subplot(1, 2, 2)\n",
-    "    plt.scatter(t, y, color='green', label='Исходные данные y')\n",
-    "    plt.plot(t, y_pred, color='orange', label=f'Полиномиальная регрессия y (степень {best_degree_y})')\n",
-    "    plt.title(f'Полиномиальная регрессия для y (степень {best_degree_y})')\n",
-    "    plt.xlabel('Время (t)')\n",
-    "    plt.ylabel('Координата (y)')\n",
-    "    plt.legend()\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "    plt.savefig(f'{path2}reg_{file}.png')\n",
-    "    plt.show()\n",
-    "\n",
-    "    \n",
-    "    ### График 3\n",
-    "    # Построение графика\n",
-    "    plt.figure()\n",
-    "    x_dot = np.gradient(x_pred, tu)\n",
-    "    y_dot = np.gradient(y_pred, tu)\n",
-    "\n",
-    "    df_dot2 = pd.DataFrame(np.vstack([x_dot, tu]).T, columns=['x_dot', 't'])\n",
-    "    df_dot2.plot(x='t', title=title)\n",
-    "\n",
-    "      \n",
+    "    # df.plot(x = 't', title=title)\n",
+    "    # plt.xlabel('Время с начала инициализации [с]')\n",
+    "    # plt.ylabel('Расстояние [м]')\n",
+    "    # plt.savefig(f'{path2}xyz_vx_vy_vz_{file}.png')\n",
+    "    # plt.show()\n",
+    "    # ### График 2\n",
+    "    # array = df.to_numpy()\n",
+    "    # tu = array[:, 6]\n",
+    "    # x = array[:, 0]\n",
+    "    # y = array[:, 1]\n",
     "    # \n",
-    "    x_ddot = np.gradient(x_dot, tu)\n",
-    "    y_ddot = np.gradient(y_dot, tu)\n",
-    "\n",
-    "    df_ddot_y = pd.DataFrame(np.vstack([y_ddot, array[:, 4], tu]).T, columns=['y_ddot', 'vy' ,'t'])\n",
-    "    # df_ddot_y.plot(x='t', title=title)\n",
-    "    \n",
-    "    df_ddot_x = pd.DataFrame(np.vstack([x_ddot, array[:, 3], tu]).T, columns=['x_ddot', 'vx' ,'t'])\n",
-    "    # df_ddot_x.plot(x='t', title=f\"Среднее ускорение = {round(df_ddot_x.iloc[:, 0].mean(), 4)}, \\n медианное - {round(df_ddot_x.iloc[:, 0].median(), 4)}\")\n",
-    "    \n",
-    "    # Линия для x2\n",
-    "    plt.plot(df_ddot_x['t'], df_ddot_x['x_ddot'], label='x_ddot')\n",
-    "    \n",
-    "    # # Линия для x3\n",
-    "    plt.plot(df['t'], df['Vx'], label='Vx (control)')\n",
-    "    \n",
-    "    # Настройки графика\n",
-    "    plt.xlabel('Time (s)')\n",
-    "    plt.title('v_x (t) and a_x (t)')\n",
-    "    plt.legend()\n",
-    "    plt.grid(True)\n",
-    "    plt.savefig(f'{path2}vx_ax_vxc_{file}.png')\n",
-    "    # Отображение графика\n",
-    "    plt.show()\n",
-    "    print(f\"Среднее ускорение = {round(df_ddot_x.iloc[:, 0].mean(), 4)}, \\n медианное - {round(df_ddot_x.iloc[:, 0].median(), 4)}\")\n"
+    "    # t = tu.reshape(-1, 1)\n",
+    "    # # Здесь потом нужно сделать алгоритм для поиска лучшей степени полинома\n",
+    "    # best_degree_x = 25\n",
+    "    # best_degree_y = 25\n",
+    "    # # Нормализуем время t\n",
+    "    # scaler = StandardScaler()\n",
+    "    # t_scaled = scaler.fit_transform(t)\n",
+    "    # # Теперь применим полиномиальную регрессию\n",
+    "    # # x\n",
+    "    # poly_x = PolynomialFeatures(best_degree_x)\n",
+    "    # t_poly_x = poly_x.fit_transform(t_scaled)\n",
+    "    # # y\n",
+    "    # poly_y = PolynomialFeatures(best_degree_y)\n",
+    "    # t_poly_y = poly_y.fit_transform(t_scaled)\n",
+    "    # \n",
+    "    # # Используем Ridge для регуляризации\n",
+    "    # model_x = Ridge(alpha=1e-6)\n",
+    "    # model_y = Ridge(alpha=1e-6)\n",
+    "    # \n",
+    "    # model_x.fit(t_poly_x, x)\n",
+    "    # model_y.fit(t_poly_y, y)\n",
+    "    # \n",
+    "    # # Предсказанные значения\n",
+    "    # x_pred = model_x.predict(t_poly_x)\n",
+    "    # y_pred = model_y.predict(t_poly_y)\n",
+    "    # \n",
+    "    # # Визуализация  \n",
+    "    # plt.figure(figsize=(14, 6))\n",
+    "    # \n",
+    "    # plt.subplot(1, 2, 1)\n",
+    "    # plt.scatter(t, x, color='blue', label='Исходные данные x')\n",
+    "    # plt.plot(t, x_pred, color='red', label='Полиномиальная регрессия x')\n",
+    "    # plt.title(f'Полиномиальная регрессия для x (степень {best_degree_x})')\n",
+    "    # plt.xlabel('Время (t)')\n",
+    "    # plt.ylabel('Координата (x)')\n",
+    "    # plt.legend()\n",
+    "    # \n",
+    "    # plt.subplot(1, 2, 2)\n",
+    "    # plt.scatter(t, y, color='green', label='Исходные данные y')\n",
+    "    # plt.plot(t, y_pred, color='orange', label=f'Полиномиальная регрессия y (степень {best_degree_y})')\n",
+    "    # plt.title(f'Полиномиальная регрессия для y (степень {best_degree_y})')\n",
+    "    # plt.xlabel('Время (t)')\n",
+    "    # plt.ylabel('Координата (y)')\n",
+    "    # plt.legend()\n",
+    "    # \n",
+    "    # plt.tight_layout()\n",
+    "    # plt.savefig(f'{path2}reg_{file}.png')\n",
+    "    # plt.show()\n",
+    "    # \n",
+    "    # \n",
+    "    # ### График 3\n",
+    "    # # Построение графика\n",
+    "    # plt.figure()\n",
+    "    # x_dot = np.gradient(x_pred, tu)\n",
+    "    # y_dot = np.gradient(y_pred, tu)\n",
+    "    # \n",
+    "    # df_dot2 = pd.DataFrame(np.vstack([x_dot, tu]).T, columns=['x_dot', 't'])\n",
+    "    # df_dot2.plot(x='t', title=title)\n",
+    "    # \n",
+    "    #   \n",
+    "    # # \n",
+    "    # x_ddot = np.gradient(x_dot, tu)\n",
+    "    # y_ddot = np.gradient(y_dot, tu)\n",
+    "    # \n",
+    "    # df_ddot_y = pd.DataFrame(np.vstack([y_ddot, array[:, 4], tu]).T, columns=['y_ddot', 'vy' ,'t'])\n",
+    "    # # df_ddot_y.plot(x='t', title=title)\n",
+    "    # \n",
+    "    # df_ddot_x = pd.DataFrame(np.vstack([x_ddot, array[:, 3], tu]).T, columns=['x_ddot', 'vx' ,'t'])\n",
+    "    # # df_ddot_x.plot(x='t', title=f\"Среднее ускорение = {round(df_ddot_x.iloc[:, 0].mean(), 4)}, \\n медианное - {round(df_ddot_x.iloc[:, 0].median(), 4)}\")\n",
+    "    # \n",
+    "    # # Линия для x2\n",
+    "    # plt.plot(df_ddot_x['t'], df_ddot_x['x_ddot'], label='x_ddot')\n",
+    "    # \n",
+    "    # # # Линия для x3\n",
+    "    # plt.plot(df['t'], df['Vx'], label='Vx (control)')\n",
+    "    # \n",
+    "    # # Настройки графика\n",
+    "    # plt.xlabel('Time (s)')\n",
+    "    # plt.title('v_x (t) and a_x (t)')\n",
+    "    # plt.legend()\n",
+    "    # plt.grid(True)\n",
+    "    # plt.savefig(f'{path2}vx_ax_vxc_{file}.png')\n",
+    "    # # Отображение графика\n",
+    "    # plt.show()\n",
+    "    # print(f\"Среднее ускорение = {round(df_ddot_x.iloc[:, 0].mean(), 4)}, \\n медианное - {round(df_ddot_x.iloc[:, 0].median(), 4)}\")\n"
    ]
   }
  ],
